# zkballot

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
artifacts/ballot/: SHA256SUMS  ballot.json  vk
artifacts/fixture/: SHA256SUMS  expected_public_inputs  fixture.json  proof  public_inputs
circuits/ballot/: Nargo.toml  Prover.toml
circuits/ballot/src/: main.nr
contracts/ballot/: Cargo.toml
contracts/ballot/contracts/ballot/: Cargo.toml
contracts/ballot/contracts/ballot/src/: lib.rs  test.rs
docs/superpowers/plans/: 2026-06-30-submission-readme.md
docs/superpowers/specs/: 2026-06-30-submission-readme-design.md
scripts/: build-artifacts.sh  deploy-testnet.sh  e2e-localnet.sh  encoding.test.ts  encoding.ts  generate-proof-inputs.ts  merkle.test.ts  merkle.ts  prove-fixture.sh  run-proof-inputs.sh  testnet-fixture-demo.sh  verify-public-input-mutations.sh
video-demo/: DESIGN.md  SCRIPT.md  STORYBOARD.md  record-demo.js
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.jsx  Workflow.jsx  styles.css
web/src/lib/: identity.js  identity.test.js  prover.js  prover.test.js  stellar.js  stellar.test.js  workflow.js  workflow.test.js
