[package]
name = "ballot"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
default = []
static-vk = []

[dependencies]
soroban-sdk = { workspace = true }
ultrahonk_rust_verifier = { git = "https://github.com/yugocabrio/ultrahonk-rust-verifier.git", rev = "2a73c4ba11f073f1797d90915ebbb9eb9d09f445", default-features = false }

[dev-dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk.git", rev = "acffbbd45be6a0a551146eebfc268d6f95078246", features = ["testutils", "alloc"] }
